# fundeb

./: .gitignore  MODERNIZATION_SUMMARY.md  README.md  README_MODERN.md  main.py  pyproject.toml
app/: app.py
app/pages/: 0_Demonstrativos_(SIOPE).py  1_Financeiro.py
assets/templates/: Pipeline DataScienc.txt  planejamento.md
docs/: TODO.md  fundeb_project.drawio  index.md
notebooks/: 00_exploratory_data_analysis.ipynb  main.ipynb  test.ipynb
output/reports/2025/B1/: RELATÓRIO SIOPE  1º BI 2025 - CACS FUNDEB-AP.docx
output/reports/2025/B2/: RELATÓRIO SIOPE  2º BI 2025 - CACS FUNDEB-AP.docx
output/reports/2025/B3/: APRESENTAÇÃO SIOPE 3ºB 2025.pptx  RELATÓRIO SIOPE  3º BI 2025 - CACS FUNDEB-AP.docx
src/fundeb/: main.py
src/fundeb/config/: database.py  extractors.yaml  logging.yaml  settings.py
src/fundeb/extractors/: base_extractor.py  csv_extractor.py
src/fundeb/factory/: factory.py
src/fundeb/flows/: main_flow.py
src/fundeb/utils/: excel_utils.py  file_discovery.py  formatters.py
